<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myappl.odekakemode.MainActivity">

    <TextView
        android:id="@+id/subTitle_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="43dp"
        android:text="@string/sub_title01"
        android:textSize="35sp" />

    <ToggleButton
        android:id="@+id/toggleWiFiOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/subTitle_wifi"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/subTitle_wifi"
        android:text="@string/togleWiFi" />

    <TextView
        android:id="@+id/message_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/subTitle_wifi"
        android:layout_below="@+id/subTitle_wifi"
        android:text="@string/wifi"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/titleVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/subTitle_wifi"
        android:layout_below="@id/message_01"
        android:layout_marginTop="20dp"
        android:text="@string/vol"
        android:textSize="35sp" />

    <ToggleButton
        android:id="@+id/toggleVolumeOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/titleVolume"
        android:layout_below="@id/message_01"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/vol_on" />

    <TextView
        android:id="@+id/message_volume"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/subTitle_wifi"
        android:layout_below="@id/titleVolume"
        android:text="@string/volume"
        android:textColor="@color/colorAccent"/>

    <SeekBar
        android:id="@+id/seekBarRing"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="221dp"
        android:layout_toEndOf="@+id/subTitle_wifi" />

    <SeekBar
        android:id="@+id/seekBarAlarm"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="169dp"
        android:layout_toEndOf="@+id/subTitle_wifi" />

    <SeekBar
        android:id="@+id/seekBarNotification"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="116dp"
        android:layout_toEndOf="@+id/subTitle_wifi" />

    <TextView
        android:id="@+id/textViewRing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/subTitle_wifi"
        android:layout_alignTop="@+id/seekBarRing"
        android:text="@string/ring_vol" />

    <TextView
        android:id="@+id/textViewAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/subTitle_wifi"
        android:layout_alignTop="@+id/seekBarAlarm"
        android:text="@string/alarm_vol" />

    <TextView
        android:id="@+id/textViewNotificaton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/subTitle_wifi"
        android:layout_alignTop="@+id/seekBarNotification"
        android:text="@string/notification_vol" />

</RelativeLayout>
